--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
 		</div>
 	</div>
     <p>Created by <a href="https://github.com/RickyLambert87" target="_blank">Ricky Lambert</a></p>
-<script src="assets/js/hammers-time.min.js"></script>
-<script src="assets/js/hammer-time.min.js"></script>
-<script src="assets/js/yahtzee.js"></script>
-<script src="assets/js/scoring.js"></script>
+<script src="/assets/js/hammers-time.min.js"></script>
+<script src="/assets/js/hammer-time.min.js"></script>
+<script src="/assets/js/yahtzee.js"></script>
+<script src="/assets/js/scoring.js"></script>
 </body>
 </html>
