--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>Yahtzee! JS</title>
-	<link rel="stylesheet" href="/assets/css/styles.css">
+	<link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700|Patrick+Hand|Fredoka+One' rel='stylesheet' type='text/css'>
 </head>
@@ -149,10 +149,9 @@
 			<button id="openRulesButton"><i class="fa fa-question-circle"></i> Rules &amp; scoring info</button>
 		</div>
 	</div>
-    <p>Created by <a href="https://github.com/RickyLambert87" target="_blank">Ricky Lambert</a></p>
-<script src="/assets/js/hammers-time.min.js"></script>
-<script src="/assets/js/hammer.min.js"></script>
-<script src="/assets/js/yahtzee.js"></script>
-<script src="/assets/js/scoring.js"></script>
+<script src="js/hammer.min.js"></script>
+<script src="js/hammer-time.min.js"></script>
+<script src="js/yahtzee.js"></script>
+<script src="js/scoring.js"></script>
 </body>
 </html>
